--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "slug": "MDb",
     "version": "1.0.0",
     "orientation": "portrait",
+    "userInterfaceStyle": "light",
     "icon": "./app/assets/icon.png",
     "splash": {
       "image": "./app/assets/splash.png",
