--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-constants": "~11.0.1",
-    "expo-sqlite": "~9.2.1",
+    "expo-sqlite": "^9.2.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -24,6 +24,7 @@
     "react-native-autocomplete-input": "^5.0.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-mmkv": "^1.2.2",
+    "react-native-pager-view": "^5.4.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
