--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-constants": "~11.0.1",
+    "expo-linear-gradient": "^9.2.0",
     "expo-sqlite": "^9.2.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
@@ -28,6 +29,7 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-snackbar": "^2.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-native-webview": "^11.6.2",
