--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^1.16.5",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
@@ -17,6 +18,7 @@
     "expo-app-loading": "^1.1.2",
     "expo-constants": "~11.0.1",
     "expo-linear-gradient": "^9.2.0",
+    "expo-notifications": "^0.12.3",
     "expo-sqlite": "^9.2.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
