--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "expo-constants": "~11.0.1",
     "expo-linear-gradient": "^9.2.0",
     "expo-notifications": "^0.12.3",
+    "expo-splash-screen": "^0.11.2",
     "expo-sqlite": "^9.2.1",
     "expo-status-bar": "~1.0.4",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-moment": "^1.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-autocomplete-input": "^5.0.2",
     "react-native-gesture-handler": "^1.10.3",
@@ -32,6 +35,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-snackbar": "^2.4.0",
+    "react-native-snackbar-component": "^1.1.11",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-native-webview": "^11.6.2",
