--- a/app.json
+++ b/app.json
@@ -19,11 +19,12 @@
       "useNextNotificationsApi": true,
       "adaptiveIcon": {
         "foregroundImage": "./app/assets/adaptive-icon.png",
-        "backgroundColor": "#222124" 
+        "backgroundColor": "#222124"
       }
     },
     "web": {
       "favicon": "./app/assets/favicon.png"
-    }
+    },
+    "description": ""
   }
 }
