--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-searchbar": "^1.16.0",
     "react-native-snackbar": "^2.4.0",
     "react-native-snackbar-component": "^1.1.11",
     "react-native-vector-icons": "^8.1.0",
